src/objects/Enterprise_Server_Configuration__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Enterprise_Server_Configurations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Compass_ID__c</fullName>
        <label>Compass_ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSI__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DSI</label>
        <referenceTo>DSI__c</referenceTo>
        <relationshipName>Enterprise_Server_Configurations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enterprise_Asset__c</fullName>
        <inlineHelpText>20 UPC Level 1 items</inlineHelpText>
        <label>Enterprise Asset</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>OLAP</fullName>
                </value>
                <value>
                    <fullName>Big Data</fullName>
                </value>
                <value>
                    <fullName>Local Data</fullName>
                </value>
                <value>
                    <fullName>Cloud Data</fullName>
                </value>
                <value>
                    <fullName>Enterprise BI</fullName>
                </value>
                <value>
                    <fullName>Remote Data</fullName>
                </value>
                <value>
                    <fullName>ETL / DS</fullName>
                </value>
                <value>
                    <fullName>Statistical</fullName>
                </value>
                <value>
                    <fullName>Directory</fullName>
                </value>
                <value>
                    <fullName>Network</fullName>
                </value>
                <value>
                    <fullName>EMM</fullName>
                </value>
                <value>
                    <fullName>Server</fullName>
                </value>
                <value>
                    <fullName>Charting</fullName>
                </value>
                <value>
                    <fullName>Mapping</fullName>
                </value>
                <value>
                    <fullName>Media</fullName>
                </value>
                <value>
                    <fullName>PACS</fullName>
                </value>
                <value>
                    <fullName>CMS</fullName>
                </value>
                <value>
                    <fullName>Enterprise Apps</fullName>
                </value>
                <value>
                    <fullName>Cloud Apps</fullName>
                </value>
                <value>
                    <fullName>Enterprise Assets</fullName>
                </value>
                <value>
                    <fullName>Tech Support Work Item</fullName>
                </value>
                <value>
                    <fullName>Infrastructure</fullName>
                </value>
                <value>
                    <fullName>RDBMS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Environment__c</fullName>
        <label>Environment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Production</fullName>
                </value>
                <value>
                    <fullName>Development</fullName>
                </value>
                <value>
                    <fullName>Test</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Machine_Name__c</fullName>
        <label>Machine Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operating_System__c</fullName>
        <label>Operating System</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Processor_Type__c</fullName>
        <label>Processor Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Code__c</fullName>
        <label>UPC Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>UPC</label>
    <nameField>
        <label>Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>UPC Catalog</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>